@@ -25,3 +25,4 @@ Collate:
     'clusteval.r'
     'random_clustering.r'
     'comembership.r'
+    'figure-of-merit.r'
